Add basic animations
Added a revealer to animate showing/hiding the overlay

--- a/volume.css
+++ b/volume.css
@@ -1,4 +1,7 @@
 window {
+	background: transparent;
+}
+revealer {
 	background: rgba(0, 0, 0, 0.9);
 	border-radius: 25px;
 	border: 1px solid rgba(255, 255, 255, 0.1);
