Add css name to main box
Added a css name to box_main
This fixes the invisible background when the revealer is disabled

--- a/volume.css
+++ b/volume.css
@@ -2,7 +2,7 @@ window {
 	background: transparent;
 }
 
-revealer > * {
+.box_layout {
 	background: @theme_bg_color;
 	border-radius: 25px;
 	border: 1px solid @borders;
