--- a/volume.css
+++ b/volume.css
@@ -16,6 +16,20 @@ label {
 	color: alpha(@theme_fg_color, 0.5);
 }
 
+/* Volume states */
+.overamplified {
+}
+.high {
+}
+.medium {
+}
+.low {
+}
+.muted {
+}
+.muted-blocking {
+}
+
 /* Horizontal layout */
 scale.horizontal {
 	padding: 0px;
