--- a/style.css
+++ b/style.css
@@ -1,40 +1,40 @@
-window {
+#syshud {
 	background: transparent;
 }
 
-.box_layout {
+#syshud .box_layout {
 	background: @theme_bg_color;
 	border-radius: 25px;
 	border: 1px solid @borders;
 	margin: 10px;
 }
 
-scale {
+#syshud scale {
 	margin: 0px;
 	padding: 0px;
 }
-label {
+#syshud label {
 	color: alpha(@theme_fg_color, 0.5);
 }
 
 /* Horizontal layout */
-scale.horizontal {
+#syshud scale.horizontal {
 	padding: 0px;
 	min-height: 5px;
 }
-scale.horizontal trough {
+#syshud scale.horizontal trough {
 	border-radius: 3px;
 	background: alpha(currentColor, 0.1);
 	min-height: 5px;
 	padding: 0px;
 }
-scale.horizontal highlight {
+#syshud scale.horizontal highlight {
 	border-radius: 3px;
 	min-height: 5px;
 	background: alpha(@theme_fg_color, 0.75);
 	margin: 0px;
 }
-scale.horizontal slider {
+#syshud scale.horizontal slider {
 	margin: 0px;
 	background: transparent;
 	min-height: 5px;
@@ -43,23 +43,23 @@ scale.horizontal slider {
 }
 
 /* Vertical layout */
-scale.vertical {
+#syshud scale.vertical {
 	padding: 0px;
 	min-width: 5px;
 }
-scale.vertical trough {
+#syshud scale.vertical trough {
 	border-radius: 3px;
 	background: alpha(currentColor, 0.1);
 	min-width: 5px;
 	padding: 0px;
 }
-scale.vertical highlight {
+#syshud scale.vertical highlight {
 	border-radius: 3px;
 	min-width: 5px;
 	background: alpha(@theme_fg_color, 0.75);
 	margin: 0px;
 }
-scale.vertical slider {
+#syshud scale.vertical slider {
 	margin: 0px;
 	background: transparent;
 	min-width: 5px;
@@ -68,13 +68,13 @@ scale.vertical slider {
 }
 
 /* Levels */
-.over {
+#syshud .over {
 }
-.high {
+#syshud .high {
 }
-.medium {
+#syshud .medium {
 }
-.low {
+#syshud .low {
 }
-.off {
+#syshud .off {
 }
