Fix class stuff
Fixed setting the mute class when brightness is changed.
Fixed incorrect css.
Clamped the class values so they work above 100% (Hopefully)

--- a/style.css
+++ b/style.css
@@ -68,13 +68,13 @@
 }
 
 /* Levels */
-#syshud .over {
-}
-#syshud .high {
-}
-#syshud .medium {
+#syshud .muted {
 }
 #syshud .low {
 }
-#syshud .off {
+#syshud .medium {
 }
+#syshud .high {
+}
+
+
