--- a/style.css
+++ b/style.css
@@ -17,51 +17,30 @@
 	color: alpha(@theme_fg_color, 0.5);
 }
 
-/* Horizontal layout */
-#syshud scale.horizontal {
+/* Scale */
+#syshud scale {
 	padding: 0px;
 	min-height: 5px;
+	min-width: 5px;
 }
-#syshud scale.horizontal trough {
+#syshud scale trough {
 	border-radius: 3px;
 	background: alpha(currentColor, 0.1);
 	min-height: 5px;
+	min-width: 5px;
 	padding: 0px;
 }
 #syshud scale.horizontal highlight {
 	border-radius: 3px;
 	min-height: 5px;
+	min-width: 5px;
 	background: alpha(@theme_fg_color, 0.75);
 	margin: 0px;
 }
-#syshud scale.horizontal slider {
+#syshud scale slider {
 	margin: 0px;
 	background: transparent;
 	min-height: 5px;
-	box-shadow: none;
-	padding: 0px;
-}
-
-/* Vertical layout */
-#syshud scale.vertical {
-	padding: 0px;
-	min-width: 5px;
-}
-#syshud scale.vertical trough {
-	border-radius: 3px;
-	background: alpha(currentColor, 0.1);
-	min-width: 5px;
-	padding: 0px;
-}
-#syshud scale.vertical highlight {
-	border-radius: 3px;
-	min-width: 5px;
-	background: alpha(@theme_fg_color, 0.75);
-	margin: 0px;
-}
-#syshud scale.vertical slider {
-	margin: 0px;
-	background: transparent;
 	min-width: 5px;
 	box-shadow: none;
 	padding: 0px;
